Commit @Fixing Media query dark mode & Styling scrollbar

--- a/client/src/styles/ActionBarStyles.css
+++ b/client/src/styles/ActionBarStyles.css
@@ -122,3 +122,76 @@ dialog[open] > .dialog-content {
   font-weight: 300;
   cursor: pointer;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
+}
+
+
+/* Media Queries for dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #111;
+        color: #fff;
+    }
+    header {
+        color: #fff;
+    }
+    
+    .action {
+        background-color: #333;
+        color: #fff;
+    }
+    .action:hover {
+        background-color: #555;
+    }
+    #filter-dialog .dialog-content form label select {
+        background-color: #333;
+        color: #fff;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    *{
+        color: #000;
+    }
+  
+    body {
+        background-color: #fff;
+    }
+    header {
+        background-color: #fff;
+    }
+    header .search {
+        background-color: #f2f2f2;
+        color: #000;
+    }
+    .action {
+        background-color: #f2f2f2;
+    }
+    .action:hover {
+        background-color: #e1e1e1;
+    }
+    
+    #filter-dialog .dialog-content form label select {
+        background-color: #fff;
+        border: #111 1px solid;
+    }
+    #filter-dialog .dialog-content form label select:focus {
+        outline: #555 1px solid;
+    }
+    
+}
